--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,7 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace 
 
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=10MB
+
 server.port = 8080
