--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/sattaporn
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url= jdbc:postgresql://sattaporn.cnbkumfaozka.us-west-2.rds.amazonaws.com:5432/sattaporn
+spring.datasource.username=sattaporn
+spring.datasource.password=papapapond
 server.connection-timeout=120000
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
