--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,6 @@ spring.jpa.properties.hibernate.type=trace
 spring.http.multipart.max-file-size=10MB
 spring.http.multipart.max-request-size=10MB
 
+spring.jackson.serialization.fail-on-empty-beans=false
+
 server.port = 8080
