--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.http.multipart.max-request-size=40MB
 spring.jackson.serialization.fail-on-empty-beans=false
 
 server.port = 8080
+
+logging.level.root = ERROR
+logging.level.org.springframework.web = ERROR
+logging.level.org.com.sattaporn = ERROR 
+logging.pattern.console = %clr(%p) %d{yyyy-MM-dd HH:mm:ss} %clr(%c){cyan}- %m%n  %clr
